# cmake-gtest-ci

./: .gitignore  README.md
task5/: CMakeLists.txt
